# barbar3

./: .gitignore  HISTORY.rst  MANIFEST.in  README.rst  ROADMAP.rst  TODO.rst  pyproject.toml  requirements.txt  setup.cfg
barbarian/: __init__.py  actions.py  assets.py  barbar.py  dungeon.py  entity.py  events.py  fov.py  game.py  gamestates.py  libtcodpy.py  log.py  map.py  mapgen.py  pathfinding.py  raws.py  server.py  settings.py  spawn.py  state.py  targetting.py  test.py  world.py
barbarian/components/: __init__.py  actor.py  base.py  items.py  physics.py  use.py
barbarian/gameio/: assets.py  settings.py
barbarian/genmap/: __init__.py  builders.py  common.py
barbarian/gui/: __init__.py  manager.py  uicomponents.py  widgets.py
barbarian/input/: __init__.py  common.py  libtcod.py  utils.py
barbarian/io/: __init__.py  assets.py  data.py  settings.py
barbarian/objects/: __init__.py  components.py  entity.py  factories.py  mapobjects.py
barbarian/renderers/: __init__.py  libtcod.py
barbarian/systems/: __init__.py  ai.py  combat.py  consumables.py  hunger.py  inventory.py  items.py  movement.py  props.py  stats.py  visibility.py
barbarian/utils/: __init__.py  assets.py  data.py  geometry.py  noise.py  (+4 more)
benchmark/: compute_distance.py  game_update.py
benchmarks/: map_benchmark.py
client_tcod/: client.py  clock.py  constants.py  event_handlers.py  nw.py  particles.py  render.py  ui_events.py  utils.py
data/: entities.json  keymap.json  mapobjs.json  settings
tests/: __init__.py  test_dungeon.py  test_factories.py  test_map.py
tools/: dungeons.py
(+75 files in other folders)
