[metadata]
name = barbarian
version = 0.0.1
author = Raphi
author_email = r.gaziano@gmailcom
description = Python roguelike
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/raphigaziano/barbar3
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Development Status :: 1 - Planning

[options]
include_package_data = True
packages = find:
python_requires = >=3.10
install_requires =
    PyYAML
    pyfastnoiselite
    tcod == 13.6.0

[options.packages.find]
include = barbarian*

[options.entry_points]
console_scripts = 
    barbar-server = barbarian.server:run_server
